syntax = "proto3";

package grpc;

option go_package = "cluster-api-server/pkg/client";

service Traveler {
    rpc Node(NodeRequest) returns (NodeResponse);
    rpc Delete(DockerRequest) returns(DockerResponse);
}

message NodeRequest {
    string clusterName = 1;
}

message NodeResponse {
    string ClusterName = 1;
    string NodeName = 2;
    int32 GPU = 3;
}

message DockerRequest {
    string dockerid = 1;
}

message DockerResponse {
}
